added call api button , add a container to hold response for the call

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <p>Welcome to our page!</p>
 <button id="btn-login" disabled="true" onclick="login()">Log in</button>
 <button id="btn-logout" disabled="true" onclick="logout()">Log out</button>
+<button id="btn-call-api" disabled="true" onclick="callApi()">Call Api</button>
+
+<!-- Add a container to hold the response from the call -->
+<pre id="api-call-result"></pre>
 
 <div class="hidden" id="gated-content">
     <p>
